--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <h1>BIODATA</h1>
                 
                     <ol>
-                        <li>1.Nama  : Raihan achmadi putra</li>
-                        <li>2.Kelas  : X RPL B</li>
-                        <li>3.Tg.lahir</li>
+                        <li>Nama  : Raihan achmadi putra</li>
+                        <li>Kelas  : X RPL B</li>
+                        <li>Tg.lahir</li>
                     </ol>
                
             </th>
